# morphophonetics

./: README.md  config.yml  data_proc.py  melspec.py  mnemorphon.py  phone_spec_cnn.py  pyproject.toml  utils.py  vh_experiment_runner.py
